# CleanArchitectureClient

./: .gitignore  Dockerfile  FHIR_STRATER(Adapter).docx  LICENSE.txt  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: __main__.py  application.py  config.py  dependencie.py  main_router.py
src - Copie/: config.py
src - Copie/adapters/kafka/: producer.py
src - Copie/domain/: aggregats.py
src - Copie/entrypoints/: monitorngrouter.py
src - Copie/services_layers/: commandsquerieshandler.py  eventshandler.py
src/adapters/: celery_app.py  eventpublisher.py  mongoadapter.py  redisadapter.py
src/adapters/kafka/: consumer.py
src/adapters/mongodb/: mongoadapter.py
src/domain/: commands.py  entities.py  events.py  exceptions.py  model.py  queries.py  schemas.py  valuesobjects.py
src/entrypoints/: endpoints.py  monitorngrouter.py  patientrouter.py
src/interfaces/: abstract_unit_of_work.py  abstractrepository.py
src/service_layer/: eventshandler.py  handler.py  messageBus.py  unit_of_work.py
src/services_layers/: commandhandler.py  commandsquerieshandler.py  eventshandler.py  handler.py  messageBus.py  queryhandler.py
tests/: __init__.py  conftest.py
tests/mongoadapter/: test_mongo_adapter.py
tests/monitoring/: __init__.py  test_health_check.py
tests/patient/: test_patient_model.py  test_patient_routes.py
unused_directorie/: commandhandler.py  exceptions.py  queryhandler.py  schemas.py  schemas_response.py
venv - Copie/: pyvenv.cfg
